--- a/views/index.slim
+++ b/views/index.slim
@@ -9,4 +9,4 @@ div
     li 
       | Implementar el listado de documentos recientes en la vista de cliente
     li
-      | Crear un Pull Request en su proyecto de Github
+      | Crear un Pull Request en su proyecto de Githubz
