--- a/views/client.slim
+++ b/views/client.slim
@@ -25,3 +25,8 @@ div
 div
   .h2.text-center
     | Documentos almacenados recientemente
+  ul.list-group
+    - @recent_documents.each do |document|
+      li.list-group-item
+        = document.name
+        a.pull-right href="/client/#{@client.id}/box/#{document.box.id}/document/#{document.id}/delete" Borrar
