--- a/views/client.slim
+++ b/views/client.slim
@@ -1,8 +1,8 @@
 ol class="breadcrumb"
   li
-    a href="/clients" 
+    a href="/clients"
       | Clientes
-  li.active 
+  li.active
     = @client.name
 div
   .h2.text-center
@@ -25,3 +25,10 @@ div
 div
   .h2.text-center
     | Documentos almacenados recientemente
+    ul.list-group
+      - @recent_documents.each do |document|
+        li.list-group-item
+          a
+            = @recent_documents
+          a.pull-right
+            | Fecha de creacion: 
